# waic-grounding-demo

./: .gitignore  AGENTS.md  README.md  dev.sh
backend/: .env.example  pyproject.toml
backend/assets/fallbacks/: grounding.json  navigation.json
backend/assets/manifests/: analytics.json  api-keys.json  dashboard.json  ipo-overview.json  ipo-star.json  logs.json  overview.json  permissions.json  rank-rising.json  rank-vol-price.json  rank-volume.json  users.json
backend/assets/site/: admin-shared.css  analytics.html  api-keys.html  dashboard.html  fin-shared.css  ipo-overview.html  ipo-star.html  logs.html  overview.html  permissions.html  rank-rising.html  rank-vol-price.html  rank-volume.html  users.html
backend/src/: server.py
backend/src/agent/: loop.py  policy.py  prompts.py  stock_prompts.py
backend/src/env/: base.py  screenshot.py
backend/src/scenes/: grounding.py  navigation.py  stock.py
backend/tools/: render.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: BoundingBox.vue  EvidencePanel.vue  PageMap.vue  QueryCard.vue  (+5 more)
web/: README.md  dev.sh
web/backend/: .env.example  pyproject.toml
web/backend/site/: ipo-subscribe.html  market-ranking.html  shared.css  shared.js
web/backend/src/: server.py
web/backend/src/agent/: loop.py  policy.py  stock_prompts.py
web/backend/src/env/: base.py  browser_env.py  remote_env.py
web/backend/src/scenes/: stock.py
web/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
(+16 files in other folders)
