[project]
name = "waic-grounding-demo"
version = "0.1.0"
description = "WAIC Active Grounding Demo — showcasing grounding precision and cognitive navigation"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "httpx",
    "openai",
    "pillow",
    "python-dotenv",
]

[project.optional-dependencies]
render = ["playwright"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
