[project]
name = "mactive-market-explore-demo"
version = "0.1.0"
description = "Mactive 股市探索 — real interactive browser demo of multimodal grounding"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "httpx",
    "openai",
    "playwright",
    "pillow",
    "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
